Change in copywrite

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ import Footer from "../components/Footer.astro"
     <section class="about-intro">
         <div class="container">
             <h2>Who we are </h2>
-            <p>Founded in 2014 by a team with decades of hands-on experience in the exhibition industry, PJ Marketing Solutions was built to help exhibition companies unlock their full potential. We understand the challenges exhibitors face because we’ve lived them and that’s why we specialize in providing the data, insights, and strategies that drive real success. Today, we’re the trusted partner for companies looking to turn events into growth opportunities.</p>
+            <p>Founded in 2014 by a team with decades of hands-on exhibition experience, PJ Marketing Solutions was created to help exhibition companies unlock their full potential. Having lived the challenges exhibitors face, we bring data-driven insights and strategies that deliver real results. Today, we’re the trusted partner for businesses turning events into growth opportunities.</p>
         </div>
     </section>
 
@@ -43,7 +43,7 @@ import Footer from "../components/Footer.astro"
         </div>
     </section>
 
-    <section class="mission-vision">
+    <!-- <section class="mission-vision">
         <div class="container">
             <div class="mission-vision-grid">
                 <div class="mission">
@@ -57,9 +57,9 @@ import Footer from "../components/Footer.astro"
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="values-section">
+    <!-- <section class="values-section">
         <div class="container">
             <h2>Our Values</h2>
             <div class="values-grid">
@@ -83,11 +83,11 @@ import Footer from "../components/Footer.astro"
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="team-section">
         <div class="container">
-            <h2>Why Choose PJ Marketing?</h2>
+            <h2>Why Us?</h2>
             <div class="team-features">
                 <div class="feature-item">
                 <h3>Specialized Expertise</h3>
@@ -106,14 +106,14 @@ import Footer from "../components/Footer.astro"
     </section>
     
 
-    <section class="client-logos">
+    <!-- <section class="client-logos">
         <div class="container">
             <h2>Trusted by Leading Organizations</h2>
             <div class="logo-track">
                 <img class="client-logo" src="/logos/dwtc.png" alt="Dubai World Trade Centre">
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="cta">
         <h2>Ready to grow your next event?</h2>
