--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Navigation from '../components/Navigation.astro';
 import Footer from '../components/Footer.astro';
+import CTA from "../components/CTA.astro";
 ---
 
 <Layout title="PJ Marketing Solutions - Exhibition Growth Partners">
@@ -73,6 +74,7 @@ import Footer from '../components/Footer.astro';
             <img class="bg-video" src="/services-backdrop2.webp" alt="Services background" loading="eager" decoding="async">
         </a>
 </section>
+<CTA />
     <Footer slot="footer" />
 </Layout>
 
