--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -27,7 +27,7 @@ const {
         color: white;
         text-align: center;
         padding: 4rem 2rem;
-        margin: 2rem 0;
+        margin: 2rem 0 4rem 0; /* increased bottom margin */
     }
 
     .cta h2 {
