--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -20,6 +20,7 @@ import CTA from "../components/CTA.astro";
         <h2> What we do. </h2>
         <p> With over 11 years of experience, we help sales and marketing teams build stronger pipelines and achieve their revenue and performance goals.
         </p>
+        <p>We support your sales and marketing teams with services that include sales development, B2B telemarketing, market research, and data management. Whether you need a fully outsourced solution or support in specific areas, our programmes are tailored to your goals and built to drive measurable growth.</p>
     </section>
 
 
