more content tweaks

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -101,10 +101,10 @@ import CTA from "../components/CTA.astro";
                     <h3>Proven Track Record</h3>
                     <p>Over 1000 successful projects with measurable results</p>
                     </div>
-                <div class="feature-item">
+                <!-- <div class="feature-item">
                     <h3>Data Driven Approach</h3>
                     <p> - </p>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
